# SmartHome_simulator

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md
inc/: csv_manager.h  device.h  weatherSim.h
inc/Active/: bulb.h  conditioning.h  heater.h  lock.h  socket.h  waterPump.h
inc/Passive/: airQualitySensor.h  barometer.h  doorSensor.h  higrometer.h  lightSensor.h  pir.h  rainSensor.h  soilHumiditySensor.h  thermometer.h  windowSensor.h
src/: csv_manager.cpp  device.cpp  main.cpp  weatherSim.cpp
src/Active/: bulb.cpp  conditioning.cpp  heater.cpp  lock.cpp  socket.cpp  waterPump.cpp
src/Passive/: airQualitySensor.cpp  barometer.cpp  doorSensor.cpp  higrometer.cpp  lightSensor.cpp  pir.cpp  rainSensor.cpp  soilHumiditySensor.cpp  thermometer.cpp  windowSensor.cpp
tests/: data_validation.py
tests_unit/: test_stack.cpp
